<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <!-- Existing Views -->
        <ImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/detail_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            android:contentDescription="@string/title_favorite"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_detail_photo"
            app:backgroundTint="@color/purple_200"/>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="24dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_penyelenggara"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_photo"
            tools:text="@string/detail_name" />

        <TextView
            android:id="@+id/tv_penyelenggara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_detail_owner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            android:text="@string/penyelenggara" />

        <TextView
            android:id="@+id/tv_detail_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/divider_after_owner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_penyelenggara"
            tools:text="@string/detail_owner" />

        <!-- Divider after Detail Owner -->
        <View
            android:id="@+id/divider_after_owner"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="24dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_owner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_waktu_acara" />

        <!-- New Section for Waktu Acara -->
        <TextView
            android:id="@+id/tv_waktu_acara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider_after_owner"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/waktu_acara" />

        <TextView
            android:id="@+id/tv_waktu_acara_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_waktu_acara"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Detail waktu acara" />

        <View
            android:id="@+id/divider_after_waktu_acara"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="24dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_waktu_acara_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- New Section for Sisa Kuota -->
        <TextView
            android:id="@+id/tv_sisa_kuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider_after_waktu_acara"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/sisa_kuota" />

        <TextView
            android:id="@+id/tv_sisa_kuota_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_sisa_kuota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Detail sisa kuota" />

        <View
            android:id="@+id/divider_after_sisa_kuota"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="24dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_sisa_kuota_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- New Section for Deskripsi Acara -->
        <TextView
            android:id="@+id/tv_deskripsi_acara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider_after_sisa_kuota"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/deskripsi_acara" />

        <TextView
            android:id="@+id/tv_deskripsi_acara_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi_acara"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Detail deskripsi acara" />

        <Button
            android:id="@+id/action_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:text="@string/register"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi_acara_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
