<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myfundamentalsubmission.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_home_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.myfundamentalsubmission.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_upcoming_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.myfundamentalsubmission.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_finished_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.myfundamentalsubmission.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_favorite_to_detailActivity"
            app:destination="@id/detailActivity" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.myfundamentalsubmission.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_setting_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_setting_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_setting_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_setting_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>
    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.myfundamentalsubmission.ui.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" >
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue="nama acara default" />
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0" />
    </activity>
</navigation>